--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Document</title> 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-</head>
+    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"> 
+</head> 
 <body>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap">
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
 
 <div class="cont">
   <div class="header">
@@ -23,6 +23,51 @@
   Creative</br> Technologist</div>
   <div class="des">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
   <button class="button">Download resume</button>
+  <div class="posts">
+    <div class="rp">Recent posts</div>
+    <div class="post1">
+      <div class="n1">Making a design system from scratch</div>
+      <div class="d1">12 Feb 2020</div>
+      <div class="p1">|</div>
+      <div class="dp1">Design, Pattern</div>
+      <div class="desp1">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+    </div>
+    <div class="post2">
+      <div class="n2">Creating pixel perfect icons in Figma</div>
+      <div class="d2">12 Feb 2020</div>
+      <div class="p2">|</div>
+      <div class="dp2">Design, Pattern</div>
+      <div class="desp2">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+    </div>
+  </div>
+  <div class="works">
+    <div class="fw">Featured works</div>
+    <div class="work-list">
+      <div class="mono"> <img class="btc" src="https://s3-alpha-sig.figma.com/img/1c6b/bc0b/e719e9d93c02a87ba51308ebb0297cdf?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OV0OdMTWLmDRdtwdKWbpsscT9BTy747GFgWbSI64sqqhAyMy-EtKOicu5OLtXdQkKHWs5OU8WMjbi~2QmUn32vDoyJhs4ENSDMg3HcYeKOb7HdkL0bLsoIGBryGoA0MhW8YFPB5ECvFoFySCSnd2LrWuRbfrj2UhgvE16tH2viQEA3jqHVZyc9peXtb0nkfY0yAwlCqb1i9di3Up0OW~fPIhOfCfcPr2LyoY7w4HHFjHq6oek2jgvgLBl8DmPR1P2qNZxNAhCMirHqKm5coeDRcKEN7Rq5YLIBAVwCH-ZEC~y63WdbKGwwavJvaTrRHi0f6LlcC1pNfqbrh-V2iq5g__" alt=""></div>
+      <div class="dd">Designing Dashboards</div>
+      <div class="y">2020</div>
+      <div class="db">Dashboard</div>
+      <div class="amet">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+      <div class="e">___________________________________________</div>
+    </div>
+  </div>
+  <div class="footer">
+    <div class="brand">
+       <div class="facebook">
+         <img class="facebook" src="https://seeklogo.com/images/F/facebook-icon-black-logo-133935095E-seeklogo.com.png" alt="">
+       </div>
+      <div class="insta">
+        <img class="insta" src="https://seeklogo.com/images/I/instagram-new-2016-glyph-logo-84CB825424-seeklogo.com.png" alt="">
+      </div>
+      <div class="twitter">
+        <img class="twitter" src="https://seeklogo.com/images/T/twitter-logo-1DEF94C339-seeklogo.com.png" alt="">
+      </div>
+      <div class="in">
+        <img class="in" src="https://seeklogo.com/images/L/linkedin-black-icon-logo-ECC426C572-seeklogo.com.png" alt="">
+      </div>
+    </div>
+    <div class="cr">Copyright ©2020 All rights reserved </div>
+  </div>
 </div>
-</body>
+</body> 
 </html>
