--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <i class="fa-solid fa-bars"></i>
   </div>
   <div class="img-wrapper">
-    <img class="john" src="https://s3-alpha-sig.figma.com/img/c316/adc4/65a80990af3a0075303343f0d615c92a?Expires=1727049600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=DmVtwU35b6ebk5-kFVFt61NP9v5Aj3v2XNLIYsK-GvaFU8O1JSNkz6ZWcJ8zsRupOqoX0Hyz7-EuOoxYguSeOyrZhWkOMyXxrU1aMMM9ulLRmuvDb~E1Gh~GlYrc75atZf0RNTT-YelXQPBzbSmy-N3~r7XZVzMxQLnhpByIC0o2wJxGkuQxy8Nbn~nqgtThjig89GkEzBH6PbHpnhRJaIFQM-oY9vi6bCwOGa15eAaBk3haAZnRgJyzsy6hp2J6I1Fic5ZiBHuAoj4N7iFc2gxCNNn4AFQw4njCB87wmL2tZxzEj0HXUl7LO6FVaQ6giZ0W3RcJBol1scWO-ZYqXA__" alt="">
+    <img class="john" src="./john.png" alt="">
   </div>
   <div class="intro">Hi, I am John,</br>
   Creative</br> Technologist</div>
