--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 <div class="cont">
   <div class="header">
     <i class="fa-solid fa-bars"></i>
+    <ul class="nav">
+      <i class="fa-solid fa-x white-icon"></i>
+      <li><a href="index.html">Main Page</a></li>
+      <li><a href="index1.html">Our Blog</a></li>
+      <li><a href="index2.html">Our Work</a></li>
+    </ul>
   </div>
   <div class="img-wrapper">
     <img class="john" src="./john.png" alt="">
