fixed some problems

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="works">
     <div class="fw">Featured works</div>
     <div class="work-list">
-      <div class="mono"> <img class="btc" src="https://s3-alpha-sig.figma.com/img/1c6b/bc0b/e719e9d93c02a87ba51308ebb0297cdf?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OV0OdMTWLmDRdtwdKWbpsscT9BTy747GFgWbSI64sqqhAyMy-EtKOicu5OLtXdQkKHWs5OU8WMjbi~2QmUn32vDoyJhs4ENSDMg3HcYeKOb7HdkL0bLsoIGBryGoA0MhW8YFPB5ECvFoFySCSnd2LrWuRbfrj2UhgvE16tH2viQEA3jqHVZyc9peXtb0nkfY0yAwlCqb1i9di3Up0OW~fPIhOfCfcPr2LyoY7w4HHFjHq6oek2jgvgLBl8DmPR1P2qNZxNAhCMirHqKm5coeDRcKEN7Rq5YLIBAVwCH-ZEC~y63WdbKGwwavJvaTrRHi0f6LlcC1pNfqbrh-V2iq5g__" alt=""></div>
+      <div class="mono"> <img class="btc" src="./dd.png" alt=""></div>
       <div class="dd">Designing Dashboards</div>
       <div class="y">2020</div>
       <div class="db">Dashboard</div>
@@ -60,16 +60,16 @@
   <div class="footer">
     <div class="brand">
        <div class="facebook">
-         <img class="facebook" src="https://seeklogo.com/images/F/facebook-icon-black-logo-133935095E-seeklogo.com.png" alt="">
+         <img class="facebook" src="./fb.png" alt="">
        </div>
       <div class="insta">
-        <img class="insta" src="https://seeklogo.com/images/I/instagram-new-2016-glyph-logo-84CB825424-seeklogo.com.png" alt="">
+        <img class="insta" src="./insta.png" alt="">
       </div>
       <div class="twitter">
-        <img class="twitter" src="https://seeklogo.com/images/T/twitter-logo-1DEF94C339-seeklogo.com.png" alt="">
+        <img class="twitter" src="./twitter.png" alt="">
       </div>
       <div class="in">
-        <img class="in" src="https://seeklogo.com/images/L/linkedin-black-icon-logo-ECC426C572-seeklogo.com.png" alt="">
+        <img class="in" src="./in.png" alt="">
       </div>
     </div>
     <div class="cr">Copyright ©2020 All rights reserved </div>
