--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,13 @@
 
 <div class="cont">
   <div class="header">
-    <i class="fa-solid fa-bars"></i>
+    <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+    <ul class="nav">
+      <i class="fa-solid fa-x white-icon" onclick="closeMenu()"></i>
+      <li><a href="index.html">Main Page</a></li>
+      <li><a href="index1.html">Our Blog</a></li>
+      <li><a href="index2.html">Our Work</a></li>
+    </ul>
   </div>
   <div class="work">Work</div>
    <div class="work-list">
@@ -51,5 +57,6 @@
     <div class="cr">Copyright ©2020 All rights reserved </div>
   </div>
 </div>
+<script src="script.js"></script>
 </body> 
 </html>
