--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <div class="cont">
   <div class="header">
-    <i class="fa-solid fa-bars"></i>
+    <i class="fa-solid fa-bars" onclick="showMenu()"></i>
     <ul class="nav">
-      <i class="fa-solid fa-x white-icon"></i>
+      <i class="fa-solid fa-x white-icon" onclick="closeMenu()"></i>
       <li><a href="index.html">Main Page</a></li>
       <li><a href="index1.html">Our Blog</a></li>
       <li><a href="index2.html">Our Work</a></li>
@@ -75,5 +75,7 @@
     <div class="cr">Copyright ©2020 All rights reserved </div>
   </div>
 </div>
+
+<script src="script.js"></script>
 </body> 
 </html>
