--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,13 @@
 
 <div class="cont">
   <div class="header">
-    <i class="fa-solid fa-bars"></i>
+    <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+    <ul class="nav">
+      <i class="fa-solid fa-x white-icon" onclick="closeMenu()"></i>
+      <li><a href="index.html">Main Page</a></li>
+      <li><a href="index1.html">Our Blog</a></li>
+      <li><a href="index2.html">Our Work</a></li>
+    </ul>
   </div>
   <div class="blog">Blog</div>
   <div class="news1">
@@ -68,5 +74,6 @@
   </div>
   </div>
 </div>
+<script src="script.js"></script>
 </body> 
 </html>
