--- a/index3.html
+++ b/index3.html
@@ -14,6 +14,7 @@
 
 <div class="cont">
   <div class="header">
+    <a href="index2.html"><i class="fa-solid fa-circle-chevron-left"></i></a>
     <i class="fa-solid fa-bars"></i>
   </div>
   <div class="name">Designing Dashboards with usability in mind</div>
