--- a/index2.html
+++ b/index2.html
@@ -39,6 +39,7 @@
       <div class="amet1">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
       <div class="ul1">___________________________________________</div>
     </div>
+    <div class="more"><a href="index3.html"><i class="fa-solid fa-circle-info"></i></a></div>
   <div class="footer">
     <div class="brand">
        <div class="facebook">
