--- a/index3.html
+++ b/index3.html
@@ -15,7 +15,13 @@
 <div class="cont">
   <div class="header">
     <a href="index2.html"><i class="fa-solid fa-circle-chevron-left"></i></a>
-    <i class="fa-solid fa-bars"></i>
+    <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+    <ul class="nav">
+      <i class="fa-solid fa-x white-icon" onclick="closeMenu()"></i>
+      <li><a href="index.html">Main Page</a></li>
+      <li><a href="index1.html">Our Blog</a></li>
+      <li><a href="index2.html">Our Work</a></li>
+    </ul>
   </div>
   <div class="name">Designing Dashboards with usability in mind</div>
   <div class="y">2020</div>
@@ -45,5 +51,6 @@
     <div class="cr">Copyright ©2020 All rights reserved </div>
   </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
