--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <div class="cont">
   <div class="header">
-    <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+    <div class="down"><a href="#lo"><i class="fa-solid fa-circle-down"></i></a></div>
+    <i class="fa-solid fa-bars" id="ho" onclick="showMenu()"></i>
     <ul class="nav">
       <i class="fa-solid fa-x white-icon" onclick="closeMenu()"></i>
       <li><a href="index.html">Main Page</a></li>
@@ -72,7 +73,8 @@
         <img class="in" src="./in.png" alt="">
       </div>
     </div>
-    <div class="cr">Copyright ©2020 All rights reserved </div>
+    <div class="cr" id="lo">Copyright ©2020 All rights reserved </div>
+    <div class="up"><a href="#ho"><i class="fa-solid fa-circle-up"></i></a></div>
   </div>
 </div>
 
