--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
 
 <div class="cont">
   <div class="header">
-    <div class="more"><a href="index3.html"><i class="fa-solid fa-circle-info"></i></a></div>
+    <div class="more" id="ho"><a href="index3.html"><i class="fa-solid fa-circle-info"></i></a></div>
     <i class="fa-solid fa-bars" onclick="showMenu()"></i>
     <ul class="nav">
       <i class="fa-solid fa-x white-icon" onclick="closeMenu()"></i>
@@ -23,6 +23,7 @@
       <li><a href="index2.html">Our Work</a></li>
     </ul>
   </div>
+  <div class="down"><a href="#lo"><i class="fa-solid fa-circle-down"></i></a></div>
   <div class="work">Work</div>
    <div class="work-list">
       <div class="mono"> <img class="btc" src="./dd.png" alt=""></div>
@@ -55,7 +56,8 @@
         <img class="in" src="./in.png" alt="">
       </div>
     </div>
-    <div class="cr">Copyright ©2020 All rights reserved </div>
+    <div class="cr" id="lo">Copyright ©2020 All rights reserved </div>
+    <div class="up"><a href="#ho"><i class="fa-solid fa-circle-up"></i></a></div>
   </div>
 </div>
 <script src="script.js"></script>
