--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="intro">Hi, I am John,</br>
   Creative</br> Technologist</div>
   <div class="des">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
-  <button class="button">Download resume</button>
+  <button class="button">Download me</button>
   <div class="posts">
     <div class="rp">Recent posts</div>
     <div class="post1">
